# OpenWolf-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  OWMap.AMD64  OWMaster.AMD64  README.CMAKE  Tremulous.AMD64
cmake/: FindBZ2.cmake  FindBullet.cmake  FindCURL.cmake  FindFBX.cmake  FindGLEW.cmake  FindGMP.cmake  FindGlib.cmake  FindLua.cmake  FindMaya.cmake  FindOculusKernelSDK.cmake  FindOculusSDK.cmake  FindOggVorbis.cmake  FindOpenCL.cmake  FindPDCurses.cmake  FindSDL.cmake  FindZlib.cmake
main/: low.cfg  ultra.cfg
main/botfiles/: chars.h  inv.h  items.c  rnd.c
main/botfiles/bots/: capt_pain_c.c  capt_pain_t.c  default_c.c  default_t.c  gargoyle_c.c  gargoyle_t.c  gargoyle_w.c  grism_c.c  kyonshi_c.c  kyonshi_t.c  kyonshi_w.c  major_c.c  major_t.c
main/gfx/.svn/: all-wcprops  entries
main/gui/: connect.menu  createfavorite.menu  createserver.menu  download.menu  drop.menu  error.menu  findplayer.menu  hud.txt  ingame.menu  ingame.txt  ingame_about.menu  ingame_callteamvote.menu  ingame_callvote.menu  ingame_game.menu  ingame_help.menu  ingame_leave.menu  ingame_options.menu  ingame_vote.menu  joinserver.menu  loading.menu  main.menu  menus.txt  mod.menu  news.menu  options.menu  password.menu  ptrc.menu  punkbuster.menu  quit.menu  quitcredit.menu  say.menu  serverinfo.menu  teamscore.menu  tremulous.txt  tremulous_alien_builder_hud.menu  tremulous_alien_common_hud.h  tremulous_alien_general_hud.menu  tremulous_alienbuild.menu  tremulous_alienclass.menu  tremulous_aliendialogs.menu  (+10 more)
main/renderProgs/: anaglyph.glsl  anamorphic_blur.glsl  anamorphic_combine.glsl  anamorphic_darken.glsl  bloom_blur.glsl  bloom_combine.glsl  bloom_darken.glsl  bokeh.glsl  calclevels4x.glsl  contrast.glsl  darkexpand.glsl  depthOfField.glsl  depthblur.glsl  dlight.glsl  down4x.glsl  esharpening.glsl  esharpening2.glsl  fogpass.glsl  fxaa.glsl  gaussian_blur.glsl  generic.glsl  lensflare.glsl  lightall.fragment  lightall.glsl  multipost.glsl  pshadow.glsl  rbm.glsl  shadowfill.glsl  shadowmask.glsl  ssao.glsl  ssgi.glsl  ssgiBlur.glsl  textureclean.glsl  texturecolor.glsl  texturedetail.glsl  tonemap.glsl  truehdr.glsl  uniquesky.glsl  uniquewater.glsl  vibrancy.glsl  (+1 more)
main/renderWorkerProgs/: HelloWorld.opencl
main/scripts/: lcannon.particle  shaderlist.txt  ui.shader
main/weapons/level2upg/: weapon.cfg
main/weapons/level3/: weapon.cfg
main/weapons/level4/: weapon.cfg
src/: astyle-code.bat  astyle-code.sh
src/docs/: Changelog
src/engine/API/: CVarSystem_api.h  FileSystem_api.h  bgame_api.h  cg_api.h  cgame_api.h  cm_api.h  database_api.h  download_api.h  gui_api.h  physics_api.h  renderer_api.h  serverBot_api.h  serverClient_api.h  serverGame_api.h  serverInit_api.h  serverMain_api.h  serverNetChan_api.h  serverSnapshot_api.h  serverWorld_api.h  sg_api.h  sgame_api.h  sound_api.h
src/engine/GPURenderer/: iqm.h  qgl.h  r_allocator.cpp  r_allocator.h  r_animation.cpp  r_backend.cpp  r_bsp.cpp  r_cmds.cpp  r_common.h  r_curve.cpp  r_dsa.cpp  r_dsa.h  r_extensions.cpp  r_extramath.cpp  r_extramath.h  r_extratypes.h  r_fbo.cpp  r_fbo.h  r_flares.cpp  r_font.cpp  r_glimp.cpp  r_glsl.cpp  r_glsl_parse.cpp  r_image.cpp  r_image_dds.cpp  r_image_jpg.cpp  r_image_png.cpp  r_image_tga.cpp  r_init.cpp  r_light.cpp  r_local.h  r_main.cpp  r_marks.cpp  r_mesh.cpp  r_model.cpp  r_model_iqm.cpp  r_noise.cpp  r_pbo.cpp  r_postprocess.cpp  r_postprocess.h  (+11 more)
src/engine/GPUWorker/: GPUWorker.cpp  GPUWorker.h  GPUWorker_Backend.cpp  GPUWorker_Backend.h  GPUWorker_CLCache.cpp  GPUWorker_CLCache.h  GPUWorker_CLManager.cpp  GPUWorker_Error.cpp  GPUWorker_Local.h  GPUWorker_OpenCL.h  GPUWorker_Program.cpp  GPUWorker_Program.h
src/engine/GUI/: gui_api.cpp  gui_api.h  gui_atoms.cpp  gui_gameinfo.cpp  gui_local.h  gui_main.cpp  gui_shared.cpp  gui_shared.h  keycodes.h  menudef.h
src/engine/OWLIb/: math_angles.h  math_matrix.cpp  math_quaternion.h  math_vector.h  precompiled.cpp  precompiled.h  q_shared.cpp  q_splineshared.h  splines.cpp  util_list.h  util_str.cpp
src/engine/OWLib/: math_angles.cpp  math_angles.h  math_matrix.cpp  math_matrix.h  math_quaternion.h  math_vector.cpp  math_vector.h  precompiled.cpp  precompiled.h  q_parse.cpp  q_shared.cpp  q_splineshared.h  splines.cpp  splines.h  types.h  util_list.h  util_str.cpp  util_str.h
src/engine/audio/: s_codec.cpp  s_codec.h  s_codec_ogg.cpp  s_codec_wav.cpp  s_dma.cpp  s_fmodex.cpp  s_local.h  s_main.cpp  s_mem.cpp  s_mix.cpp  s_openal.cpp  s_public.h  snd_adpcm.cpp  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_public.h  snd_wavelet.cpp
src/engine/bgame/: bg_alloc.cpp  bg_local.h  bg_misc.cpp  bg_pmove.cpp  bg_public.h  bg_slidemove.cpp  bg_voice.cpp
src/engine/botai/: ai_alien.cpp  ai_chat.cpp  ai_chat.h  ai_human.cpp  ai_humannet.cpp  ai_local.h  ai_main.cpp  ai_utils.cpp
src/engine/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.cpp  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.cpp  be_aas_main.h  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.cpp  be_aas_optimize.h  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.cpp  be_ai_char.h  be_ai_chat.cpp  be_ai_chat.h  be_ai_gen.cpp  be_ai_gen.h  be_ai_goal.cpp  be_ai_goal.h  be_ai_move.cpp  be_ai_move.h  be_ai_weap.cpp  be_ai_weap.h  (+22 more)
src/engine/cgame/: cg_animation.cpp  cg_animmapobj.cpp  cg_api.cpp  cg_api.h  cg_attachment.cpp  cg_buildable.cpp  cg_consolecmds.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_ents.cpp  cg_event.cpp  cg_local.h  cg_main.cpp  cg_marks.cpp  cg_mem.cpp  cg_particles.cpp  cg_players.cpp  cg_playerstate.cpp  cg_precompiled.cpp  cg_precompiled.h  cg_predict.cpp  cg_ptr.cpp  cg_scanner.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_trails.cpp  cg_tutorial.cpp  cg_view.cpp  cg_weapons.cpp
src/engine/client/: cg_api.h  cin_ogm.cpp  cl_HydraManager.cpp  cl_HydraManager.h  cl_avi.cpp  (+13 more)
src/libs/: CMakeLists.txt
(+886 files in other folders)
